@@ -16,7 +16,7 @@
 ##
 
 """\
-This code does basic non-persistent state handling.
+This code does basic state handling (both persistent and not).
 
 set state X NAME
 	sets the named state to X
@@ -43,9 +43,11 @@ from homevent.base import Name
 from homevent.collect import Collection,Collected
 from homevent.times import now,humandelta
 
-from twisted.internet.defer import inlineCallbacks
+from twisted.internet.defer import inlineCallbacks,returnValue
 
-import os
+import os,sys
+
+Db = None
 
 class States(Collection):
     name = "state"
@@ -68,6 +70,9 @@ class State(Collected):
 		self.working = False
 		super(State,self).__init__(*name)
 	
+	def init(self):
+		pass
+
 	@inlineCallbacks
 	def delete(self,ctx):
 		if self.working:
@@ -79,6 +84,9 @@ class State(Collected):
 				yield process_event(Event(ctx,"state",self.value,"-",*self.name))
 		finally:
 			self.delete_done()
+
+	def set_value(self, val):
+		self.value = val
 
 	def list(self):
 		yield ("value", self.value)
@@ -93,6 +101,40 @@ class State(Collected):
 		else:
 			return unicode(self.value)
 
+class SavedState(State):
+	def __init__(self, *name):
+		super(SavedState,self).__init__(*name)
+		del self.value
+	
+	@inlineCallbacks
+	def init(self):
+		global Db
+		if Db is None:
+			from homevent.database import DbStore
+			Db = DbStore("state")
+			yield Db.start()
+		try:
+			self.value = yield Db.get(self.name)
+		except KeyError:
+			self.value = None
+
+	@inlineCallbacks
+	def set_value(self,val):
+		if val is None:
+			yield Db.delete(self.name)
+		else:
+			yield Db.set(self.name,val)
+		self.value = val
+
+	@inlineCallbacks
+	def delete(self,ctx):
+		yield Db.delete(self.name)
+		yield super(SavedState,self).delete(ctx)
+
+	def list(self):
+		for r in super(SavedState,self).list(): yield r
+		yield ("persistent","yes")
+
 	
 class StateHandler(AttributedStatement):
 	name=("state",)
@@ -102,20 +144,24 @@ state name...
 	: creates an empty named state
 """
 	trigger = None
+	ptrigger = None
+	coll = State
 
 	@inlineCallbacks
 	def run(self,ctx,**k):
 		event = self.params(ctx)
 		if not len(event):
 			raise SyntaxError(u"Usage: state ‹name…›")
-		s = State(*event)
+		s = self.coll(*event)
+		yield s.init()
 		s.working = True
 		try:
-			s.value = getattr(self,"value",None)
+			if hasattr(self,"value") and s.value is None:
+				yield s.set_value(self.value)
 			s.time = now()
-			s.old_value = None
-			if self.trigger:
-				old = "-"
+			if s.value is None and self.trigger \
+					or s.value is not None and self.ptrigger:
+				old = s.old_value if s.old_value is not None else "-"
 				val = s.value
 				if val is None: val = "-"
 				yield process_event(Event(self.ctx,"state",old,self.value,*s.name))
@@ -146,12 +192,29 @@ value ‹whatever›
 			self.parent.value = None
 StateHandler.register_statement(ValueHandler)
 
+class SavedHandler(Statement):
+	name=("saved",)
+	doc="Keep the state between runs"
+	long_doc="""\
+saved 
+	: save/restore the state between invocations of HomEvenT
+"""
+
+	def run(self,ctx,**k):
+		event = self.params(ctx)
+		if len(event):
+			raise SyntaxError(u"Usage: saved")
+		self.parent.coll = SavedState
+StateHandler.register_statement(SavedHandler)
+
 class TriggerHandler(Statement):
 	name=("trigger",)
 	doc="Signal when a state is created"
 	long_doc="""\
 trigger new
 	: sends a standard value-changed signal upon state creation
+trigger old
+	: same, when a saved state is restored
 """
 
 	def run(self,ctx,**k):
@@ -161,6 +224,8 @@ trigger new
 		for v in event:
 			if v == "new":
 				self.parent.trigger = True
+			elif v == "old":
+				self.parent.ptrigger = True
 			else:
 				raise SyntaxError(u"Usage: trigger new")
 StateHandler.register_statement(TriggerHandler)
@@ -194,14 +259,34 @@ set state X name...
 		s.working = True
 		try:
 			s.old_value = s.value
-			if value == "-":
-				s.value = None
-			else:
-				s.value = value
+			yield s.set_value(value if value != "-" else None)
 			s.time = now()
 			yield process_event(Event(self.ctx,"state",old,value,*s.name))
 		finally:
 			s.working = False
+
+class ForgetStateHandler(Statement):
+	name=("forget","state")
+	doc="delete a saved state from the persistent database"
+	long_doc="""\
+forget state name...
+	- removes this saved state from the database
+	  The value will be re-added the next time the state is changed!
+"""
+	@inlineCallbacks
+	def run(self,ctx,**k):
+		event = self.params(ctx)
+		if not len(event):
+			raise SyntaxError(u"Usage: forget state ‹name…›")
+		name = Name(event)
+
+		global Db
+		if Db is None:
+			from homevent.database import DbStore
+			Db = DbStore("state")
+			yield Db.start()
+
+		yield Db.delete(name)
 
 
 class VarStateHandler(Statement):
@@ -265,14 +350,33 @@ class ExistsStateCheck(Check):
 		return name in States
 
 
+class KnownStateCheck(Check):
+	name=("known","state")
+	doc="check if a state is stored in the persistent database"
+	@inlineCallbacks
+	def check(self,*args):
+		if len(args) < 1:
+			raise SyntaxError(u"Usage: if known state ‹name…›")
+
+		global Db
+		if Db is None:
+			from homevent.database import DbStore
+			Db = DbStore("state")
+			yield Db.start()
+		try:
+			yield Db.get(Name(args))
+		except KeyError:
+			returnValue(False)
+		else:
+			returnValue(True)
+
+
 class StateModule(Module):
 	"""\
 		This is a module to store system state.
-
-		Persistency is planned.
 		"""
 
-	info = "store NONpersistent state"
+	info = "store state"
 
 	def load(self):
 		main_words.register_statement(StateHandler)
@@ -282,14 +386,17 @@ class StateModule(Module):
 		register_condition(StateLockedCheck)
 		register_condition(LastStateCheck)
 		register_condition(ExistsStateCheck)
+		register_condition(KnownStateCheck)
 	
 	def unload(self):
 		main_words.unregister_statement(StateHandler)
 		main_words.unregister_statement(SetStateHandler)
 		main_words.unregister_statement(VarStateHandler)
+		main_words.unregister_statement(ForgetStateHandler)
 		unregister_condition(StateCheck)
 		unregister_condition(StateLockedCheck)
 		unregister_condition(LastStateCheck)
 		unregister_condition(ExistsStateCheck)
+		unregister_condition(KnownStateCheck)
 	
 init = StateModule
